# polymarket-bot

./: .env.example  .gitignore  CLAUDE.md  Polymarket_Bot_Logica_Estrategica.docx  README.md  dashboard_prompt.md  pyproject.toml
.claude/: settings.local.json
dashboard/: README.md  app.py
dashboard/static/: index.html
prompts/: polygon_rpc_realtime.md  telegram_commands.md
scripts/: cleanup_legacy_partials.py  diag_check_exchanges.py  diag_dump_logs.py  diag_e2e_chain.py  diag_getlogs_limit.py  diag_integration.py  diag_one_wallet.py  diag_wallets.py  diag_watch.py  force_rebalance.py  settle_stale_positions.py  setup_credentials.py
src/polymarket_bot/: main.py
src/polymarket_bot/api/: __init__.py  polymarket_clob.py  polymarket_data.py
src/polymarket_bot/config/: __init__.py  constants.py  settings.py
src/polymarket_bot/db/: __init__.py  enums.py  models.py  session.py
src/polymarket_bot/execution/: __init__.py  dedup.py  order_manager.py  pipeline.py  sizer.py
src/polymarket_bot/market/: __init__.py  consensus.py  ev_calculator.py  filters.py  models.py
tests/: conftest.py
tests/fixtures/: markets.py  trades.py
tests/unit/: test_chain_watcher.py  test_circuit_breaker.py  test_consensus.py  test_ev.py  test_exit_manager.py  test_exposure_guard.py  test_market_builder.py  test_market_filters.py  test_noise_filter.py  test_order_manager.py  test_pipeline.py  test_portfolio_manager.py  test_rebalancer.py  test_scoring.py  test_signal_reader.py  test_sizer.py  test_telegram_commander.py  test_telegram_notifier.py  test_wallet_monitor.py
(+23 files in other folders)
